--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body{
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 20px;
+    min-height: 91vh !important;
 }
 
 p,li{
@@ -28,7 +29,7 @@ p,li{
 
 .conteudo{
     background-color: #f9f9f9;
-
+    min-height: 91vh !important;
 }
 
 /********************/
@@ -67,7 +68,7 @@ p,li{
 }
 
 .navbar-brand :hover{
-    font-family: 'sans-serif', 'arial'; d
+    font-family: 'sans-serif', 'arial';
     color: rgba(255,255,255,.6) !important;
 }
 
